reports grid-Nodata mesg alignment fixed Notificaton  display  service unavailable message fixed

--- a/UI/WebContent/app/css/dashboard.css
+++ b/UI/WebContent/app/css/dashboard.css
@@ -358,3 +358,6 @@
 	marker-offset: -18px;
 }
 
+#Nodata{
+	margin-top: 15% 
+}
